--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         </div>
       </div>
       <p class="highPerformance">High Performance,Low Cost</p>
+      <div class="whiteStripe"></div>
     </header>
 
     <div class="blackBand">
@@ -50,9 +51,10 @@
       </div>
     </div>
 
-    <main>
+    <main class="main">
       <div class="narrowWrapper">
         <div class="narrowBG"></div>
+        <div class="straightBG"></div>
       </div>
 
       <div class="webDevelopment">
@@ -119,7 +121,10 @@
                 </div>
                 <div class="text">
                   <h2>Wordpress</h2>
+                  <p class="pros">Pros</p>
                   <p>WordPress is certainly the most popular and the most widely used CMS. Even without having serious technical skills, one may find it to be the easiest of them all, to build and manage a stylish, functional, feature full and a search engine friendly website. As an open source platform, WordPress's source code is available to anyone who would like to change, modify or even create their own plugging and themes.It can be installed easily on a hosting server and the development work can be started immediately.It is powerful, allowing you to update the content of your site as frequently as you wish without the involvement of a developer. You can start your site simple and extend the functionality with thousands of plugging already available. As the most powerful blogging platform, Sites using WordPress: eBay Blog, Yahoo Blog, Ford, The Wall Street Journal Blog, Flickr Blog, People, CNN Blog</p>
+                  <p class="cons">Cons</p>
+                  <p>For blogging and for personal use with small content type, WordPress is well suited and unsurpassed. For larger corporate websites and eCommerce sites however, one may want to consider its limited architecture, security vulnerabilities and the need for systematic changes which would increase the building cost substantially. WordPress plugging are plentiful, you have a development need, there a plugging for it. These plugging however, could be a major source of problems in site development and site maintenance, especially if they have been developed by rather unqualified people or may no longer be supported. Since it is such a popular CMS, it is also a favorite platform for hackers and it must be frequently updated with new versions. These updates alone could be a major source of headache as the functionality may break or the plugging may no longer work properly.</p>
                 </div>
               </div>
 
