hard reveal anim

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       </div>
 
       <div class="webDevelopment">
+        <div class="animatedHeading"></div>
         <p class="headingTop">WEB</p>
         <p class="headingBot">DEVELOPMENT</p>
       </div>
@@ -69,8 +70,10 @@
                 <div class="images">
                   <img class="screen" src="assets/img/screen.jpg" alt="">
                 </div>
-                <div class="text">
-                  <p>When we meet someone in person, it may take 3-7 seconds for them to pass a judgment and decide whether or not they would want to have a business relationship with us. On the internet, our websites function Pretty much the same way and we should try to make our visitors first impression, a lasting impression. When we have the opportunity to design/redesign and develop your online presence, we keep these points in mind. We quite understand that, a strategically developed website is quite important to your business. may have only one chance to convert a passing visitor, into a loyal buyer.   On the technical side, we have the skills and the experience necessary to develop secure, stable and high performance web and mobile applications. Our framework-driven development approach not only ensures high performance, but also delivers proven results.</p>
+                <div class="textWraperAnimDiv">
+                  <div class="text">
+                    <p>When we meet someone in person, it may take 3-7 seconds for them to pass a judgment and decide whether or not they would want to have a business relationship with us. On the internet, our websites function Pretty much the same way and we should try to make our visitors first impression, a lasting impression. When we have the opportunity to design/redesign and develop your online presence, we keep these points in mind. We quite understand that, a strategically developed website is quite important to your business. may have only one chance to convert a passing visitor, into a loyal buyer.   On the technical side, we have the skills and the experience necessary to develop secure, stable and high performance web and mobile applications. Our framework-driven development approach not only ensures high performance, but also delivers proven results.</p>
+                  </div>
                 </div>
               </div>
 
@@ -78,9 +81,11 @@
                 <div class="images">
                   <img class="speedImg" src="assets/img/speed.jpg" alt="">
                 </div>
-                <div class="text">
-                  <h2>SPEED</h2>
-                  <p>There is much to be said regarding this subject. But to make it short, your website upload speed affects all and every metric you care about, These metrics include factors such as page abandonment, bad reputation, loss of SEO juice and finally your revenue. To clarify further, you can read HERE how one second could cost Amazon 1.6 Billion in sales per year. As you may have concluded, often times it is not enough just to build a website or an app, but rather how it is built that could make or break your business. We can build not only well optimized applications, but also websites and apps that would easily scale up as your business grows.</p>
+                <div class="textWraperAnimDiv">
+                  <div class="text">
+                    <h2>SPEED</h2>
+                    <p>There is much to be said regarding this subject. But to make it short, your website upload speed affects all and every metric you care about, These metrics include factors such as page abandonment, bad reputation, loss of SEO juice and finally your revenue. To clarify further, you can read HERE how one second could cost Amazon 1.6 Billion in sales per year. As you may have concluded, often times it is not enough just to build a website or an app, but rather how it is built that could make or break your business. We can build not only well optimized applications, but also websites and apps that would easily scale up as your business grows.</p>
+                  </div>
                 </div>
               </div>
 
@@ -88,9 +93,11 @@
                 <div class="images">
                   <img class="speedImg" src="assets/img/net.jpg" alt="">
                 </div>
-                <div class="text">
-                  <h2>TECHNOLOGIES WE USE</h2>
-                  <p>We're proficient with every major web and mobile platforms in use. However, we are mainly concentrated on developing on open source technologies and frameworks. These technologies include but are not limited to PHP (Laravel, Zend, and Symfony), Python (Django), and Ruby on Rails, Java and Javascript. We also use Objective-C for native IOS app development.</p>
+                <div class="textWraperAnimDiv">
+                  <div class="text">
+                    <h2>TECHNOLOGIES WE USE</h2>
+                    <p>We're proficient with every major web and mobile platforms in use. However, we are mainly concentrated on developing on open source technologies and frameworks. These technologies include but are not limited to PHP (Laravel, Zend, and Symfony), Python (Django), and Ruby on Rails, Java and Javascript. We also use Objective-C for native IOS app development.</p>
+                  </div>
                 </div>
               </div>
 
@@ -98,9 +105,11 @@
                 <div class="images">
                   <img class="speedImg" src="assets/img/cms.jpg" alt="">
                 </div>
-                <div class="text">
-                  <h2>CMS WE USE</h2>
-                  <p>While there are literally 100s of different CMS platforms available today, we concentrate on several major platforms and they include WordPress, Drupal, Magento and Joomla.</p>
+                <div class="textWraperAnimDiv">
+                  <div class="text">
+                    <h2>CMS WE USE</h2>
+                    <p>While there are literally 100s of different CMS platforms available today, we concentrate on several major platforms and they include WordPress, Drupal, Magento and Joomla.</p>
+                  </div>
                 </div>
               </div>
             </div>
